// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-selector-card #render should render component as expected (1) 1`] = `
<gux-selector-card-beta variant="simple">
  <template shadowrootmode="open">
    <div class="gux-selector-card gux-simple gux-disabled">
      <div class="gux-content">
        <div class="gux-icon">
          <slot name="icon">
          </slot>
        </div>
        <div class="gux-label-container">
          <slot name="label">
          </slot>
        </div>
        <slot name="input">
        </slot>
        <span class="gux-screenreader">
          <slot name="description">
          </slot>
        </span>
      </div>
    </div>
  </template>
  <label slot="label" for="second">
    Card Label
  </label>
  <input slot="input" id="second" type="radio" name="example2" disabled="" value="card-label">
  <gux-icon slot="icon" icon-name="fa/diamond-regular" decorative="">
    <span slot="content" id="existing-id">
      A second label for a sample selector card. Used in Spark WCL.
    </span>
  </gux-icon>
</gux-selector-card-beta>
`;

exports[`gux-selector-card #render should render component as expected (2) 1`] = `
<gux-selector-card-beta variant="simple">
  <template shadowrootmode="open">
    <div class="gux-selector-card gux-simple gux-disabled">
      <div class="gux-content">
        <div class="gux-icon">
          <slot name="icon">
          </slot>
        </div>
        <div class="gux-label-container">
          <slot name="label">
          </slot>
        </div>
        <slot name="input">
        </slot>
        <span class="gux-screenreader">
          <slot name="description">
          </slot>
        </span>
      </div>
    </div>
  </template>
  <label slot="label" for="third">
    Card Label
  </label>
  <input slot="input" id="third" type="radio" name="example3" disabled="" checked="" value="card-label">
  <gux-icon slot="icon" icon-name="fa/diamond-regular" decorative="">
  </gux-icon>
</gux-selector-card-beta>
`;

exports[`gux-selector-card #render should render component as expected (3) 1`] = `
<gux-selector-card-beta variant="simple">
  <template shadowrootmode="open">
    <div class="gux-selector-card gux-simple">
      <div class="gux-content">
        <div class="gux-icon">
          <slot name="icon">
          </slot>
        </div>
        <div class="gux-label-container">
          <slot name="label">
          </slot>
        </div>
        <slot name="input">
        </slot>
        <span class="gux-screenreader">
          <slot name="description">
          </slot>
        </span>
      </div>
    </div>
  </template>
  <label slot="label" for="fourth">
    A longer card label example
  </label>
  <input slot="input" id="fourth" type="radio" name="example4" value="card-label">
  <gux-icon slot="icon" icon-name="fa/diamond-regular" decorative="">
  </gux-icon>
</gux-selector-card-beta>
`;

exports[`gux-selector-card #render should render component as expected (4) 1`] = `
<gux-selector-card-beta variant="descriptive">
  <template shadowrootmode="open">
    <div class="gux-selector-card gux-descriptive">
      <div class="gux-content">
        <div class="gux-icon">
          <slot name="icon">
          </slot>
        </div>
        <div class="gux-label-container">
          <slot name="label">
          </slot>
        </div>
        <slot name="input">
        </slot>
        <div class="gux-description-container">
          <slot name="description">
          </slot>
        </div>
        <slot name="badge">
        </slot>
      </div>
    </div>
  </template>
  <label slot="label" for="fourth">
    A longer card label example. This can span up to 2 lines.
  </label>
  <input slot="input" id="fourth" type="radio" name="example4" value="card-label">
  <span slot="content">
    A description for a sample selector card. Used in Spark WCL. Descriptions can span up to 3 lines before being truncated.
  </span>
  <gux-badge slot="badge" bold="">
    Badge
  </gux-badge>
  <gux-icon slot="icon" icon-name="fa/diamond-regular" decorative="">
  </gux-icon>
</gux-selector-card-beta>
`;

exports[`gux-selector-card #render should render component as expected (5) 1`] = `
<gux-selector-card-beta variant="descriptive">
  <template shadowrootmode="open">
    <div class="gux-selector-card gux-descriptive gux-disabled">
      <div class="gux-content">
        <div class="gux-icon">
          <slot name="icon">
          </slot>
        </div>
        <div class="gux-label-container">
          <slot name="label">
          </slot>
        </div>
        <slot name="input">
        </slot>
        <div class="gux-description-container">
          <slot name="description">
          </slot>
        </div>
        <slot name="badge">
        </slot>
      </div>
    </div>
  </template>
  <label slot="label" for="third">
    Card Label
  </label>
  <input slot="input" id="third" type="radio" name="example3" disabled="" checked="" value="card-label">
  <span slot="content">
    A label for a sample selector card. Used in Spark WCL.
  </span>
  <gux-badge slot="badge" bold="">
    Badge
  </gux-badge>
  <gux-icon slot="icon" icon-name="fa/diamond-regular" decorative="">
  </gux-icon>
</gux-selector-card-beta>
`;

exports[`gux-selector-card #render should render component as expected (6) 1`] = `
<gux-selector-card-beta variant="descriptive">
  <template shadowrootmode="open">
    <div class="gux-selector-card gux-descriptive gux-disabled">
      <div class="gux-content">
        <div class="gux-icon">
          <slot name="icon">
          </slot>
        </div>
        <div class="gux-label-container">
          <slot name="label">
          </slot>
        </div>
        <slot name="input">
        </slot>
        <div class="gux-description-container">
          <slot name="description">
          </slot>
        </div>
        <slot name="badge">
        </slot>
      </div>
    </div>
  </template>
  <label slot="label" for="second">
    Card Label
  </label>
  <input slot="input" id="second" type="radio" name="example2" disabled="" value="card-label">
  <span slot="content">
    A label for a sample selector card. Used in Spark WCL.
  </span>
  <gux-badge slot="badge" bold="">
    Badge
  </gux-badge>ß
  <gux-icon slot="icon" icon-name="fa/diamond-regular" decorative="">
  </gux-icon>
</gux-selector-card-beta>
`;

exports[`gux-selector-card #render should render component as expected (7) 1`] = `
<gux-selector-card-beta variant="descriptive">
  <template shadowrootmode="open">
    <div class="gux-selector-card gux-descriptive">
      <div class="gux-content">
        <div class="gux-icon">
          <slot name="icon">
          </slot>
        </div>
        <div class="gux-label-container">
          <slot name="label">
          </slot>
        </div>
        <slot name="input">
        </slot>
        <div class="gux-description-container">
          <slot name="description">
          </slot>
        </div>
        <slot name="badge">
        </slot>
      </div>
    </div>
  </template>
  <label slot="label" for="first">
    Card label
  </label>
  <input slot="input" id="first" type="radio" name="example1" value="card-label">
  <span slot="content">
    A label for a sample selector card. Used in Spark WCL.
  </span>
  <gux-badge slot="badge" bold="">
    Badge
  </gux-badge>
  <gux-icon slot="icon" icon-name="fa/diamond-regular" decorative="">
  </gux-icon>
</gux-selector-card-beta>
`;

exports[`gux-selector-card #render should render component as expected (8) 1`] = `
<gux-selector-card-beta variant="descriptive">
  <template shadowrootmode="open">
    <div class="gux-selector-card gux-descriptive">
      <div class="gux-content">
        <div class="gux-icon">
          <slot name="icon">
          </slot>
        </div>
        <div class="gux-label-container">
          <slot name="label">
          </slot>
        </div>
        <slot name="input">
        </slot>
        <div class="gux-description-container">
          <slot name="description">
          </slot>
        </div>
        <slot name="badge">
        </slot>
      </div>
    </div>
  </template>
  <label slot="label" for="first">
    Card label
  </label>
  <input slot="input" id="first" type="radio" name="example1" value="card-label">
  <span slot="content">
    A label for a sample selector card. Used in Spark WCL.
  </span>
  <gux-icon slot="icon" icon-name="fa/diamond-regular" decorative="">
  </gux-icon>
</gux-selector-card-beta>
`;

exports[`gux-selector-card #render should render component as expected (9) 1`] = `
<gux-selector-card-beta variant="descriptive">
  <template shadowrootmode="open">
    <div class="gux-selector-card gux-descriptive">
      <div class="gux-content">
        <div class="gux-icon">
          <slot name="icon">
          </slot>
        </div>
        <div class="gux-label-container">
          <slot name="label">
          </slot>
        </div>
        <slot name="input">
        </slot>
        <div class="gux-description-container">
          <slot name="description">
          </slot>
        </div>
        <slot name="badge">
        </slot>
      </div>
    </div>
  </template>
  <label slot="label" for="first">
    Card label
  </label>
  <input slot="input" id="first" type="radio" name="example1" value="card-label">
  <gux-badge slot="badge" bold="">
    Badge
  </gux-badge>
  <gux-icon slot="icon" icon-name="fa/diamond-regular" decorative="">
  </gux-icon>
</gux-selector-card-beta>
`;

exports[`gux-selector-card #render should render component as expected (10) 1`] = `
<gux-selector-card-beta variant="descriptive">
  <template shadowrootmode="open">
    <div class="gux-selector-card gux-descriptive">
      <div class="gux-content">
        <div class="gux-icon">
          <slot name="icon">
          </slot>
        </div>
        <div class="gux-label-container">
          <slot name="label">
          </slot>
        </div>
        <slot name="input">
        </slot>
        <div class="gux-description-container">
          <slot name="description">
          </slot>
        </div>
        <slot name="badge">
        </slot>
      </div>
    </div>
  </template>
  <label slot="label" for="gux-form-field-input-i">
    A longer card label example. This can span up to 2 lines.
  </label>
  <input slot="input" type="checkbox" name="food-1[]" value="pasta" aria-describedby="gux-description-i" id="gux-form-field-input-i">
  <span slot="description" id="gux-description-i">
    A description for a sample selector card. Used in Spark WCL.
        Descriptions can span up to 3 lines before being truncated.
  </span>
  <gux-badge slot="badge" bold="">
    Badge
  </gux-badge>
  <gux-icon slot="icon" icon-name="fa/diamond-regular" decorative="">
  </gux-icon>
</gux-selector-card-beta>
`;

exports[`gux-selector-card #render should render component as expected (11) 1`] = `
<gux-selector-card-beta variant="simple">
  <template shadowrootmode="open">
    <div class="gux-selector-card gux-simple">
      <div class="gux-content">
        <div class="gux-icon">
          <slot name="icon">
          </slot>
        </div>
        <div class="gux-label-container">
          <slot name="label">
          </slot>
        </div>
        <slot name="input">
        </slot>
        <span class="gux-screenreader">
          <slot name="description">
          </slot>
        </span>
      </div>
    </div>
  </template>
  <label slot="label" for="gux-form-field-input-i">
    Card label
  </label>
  <input slot="input" type="checkbox" name="food-1[]" value="pizza" aria-describedby="gux-description-i" id="gux-form-field-input-i">
  <gux-icon slot="icon" icon-name="fa/diamond-regular" decorative="">
    <span slot="description" id="gux-description-i">
      A label for a sample selector card. Used in Spark WCL.
    </span>
  </gux-icon>
</gux-selector-card-beta>
`;
